syntax = "proto3";

package emcache;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/nrjais/emcache/pkg/protos";

enum DataType {
  ANY = 0;
  JSONB = 1;
  BOOL = 2;
  NUMBER = 3;
  INTEGER = 4;
  TEXT = 5;
}

message Column {
  string name = 1;
  DataType type = 2;
  string path = 3;
}

message Index {
  repeated string columns = 1;
}

message Shape {
  repeated Column columns = 2;
  repeated Index indexes = 3;
}

service EmcacheService {
  rpc GetCollections (GetCollectionsRequest) returns (GetCollectionsResponse);

  rpc DownloadDb (DownloadDbRequest) returns (stream DownloadDbResponse);

  rpc GetOplogEntries (GetOplogEntriesRequest) returns (GetOplogEntriesResponse);

  rpc AddCollection (AddCollectionRequest) returns (AddCollectionResponse);

  rpc RemoveCollection (RemoveCollectionRequest) returns (RemoveCollectionResponse);
}

message GetCollectionsRequest {
  repeated string collection_names = 1;
}

message GetCollectionsResponse {
  repeated Collection collections = 1;
}

message Collection {
  string name = 1;
  int32 version = 2;
  Shape shape = 3;
}

enum Compression {
  NONE = 0;
  ZSTD = 1;
  GZIP = 2;
}

message DownloadDbRequest {
  string collection_name = 1;
  Compression compression = 2;
}

message DownloadDbResponse {
  int32 version = 1;
  bytes chunk = 2;
  Compression compression = 3;
}

message GetOplogEntriesRequest {
  repeated string collection_names = 1;
  int64 after_index = 2;
  int32 limit = 3;
}

message GetOplogEntriesResponse {
  repeated OplogEntry entries = 1;
}

message OplogEntry {
  enum OperationType {
    UPSERT = 0;
    DELETE = 1;
  }

  int64 index = 1;
  OperationType operation = 2;
  string id = 3;
  google.protobuf.Timestamp timestamp = 4;
  string collection = 5;
  google.protobuf.Struct data = 6;
  int32 version = 7;
}

message AddCollectionRequest {
  string collection_name = 1;
  Shape shape = 2;
}

message AddCollectionResponse {
}

message RemoveCollectionRequest {
  string collection_name = 1;
}

message RemoveCollectionResponse {
}
